--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto de Contabilidad</title>
+    <link rel="stylesheet" href="/Conta/css/style.css">
 </head>
 <body>
     
+    <h1>Bienvenido a Contabilidad</h1>
+
+    <table>
+        <tr>
+            <th>Cuenta</th>
+            <th>Descripcion</th>
+            <th>Saldo</th>
+        </tr>
+
+
+        <tr>
+            <td>101</td>
+            <td>Banco</td>
+            <td>$1000</td>
+        </tr>
+
+    </table>
+
 </body>
 </html>
