--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <td>$1000</td>
         </tr>
 
+        <tr>
+            <td>102</td>
+            <td>Clientes</td>
+            <td>$500</td>
+
     </table>
 
 </body>
